# python_basic_exercises

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
exercicios_basicos/: exercicio001.py  exercicio002.py  exercicio003.py  exercicio004.py  exercicio006.py  exercicio007.py  exercicio009.py  exercicio010.py  exercicio011.py  exercicio012.py  exercicio013.py  exercicio05.py  exercicio08.py
