[tool.poetry]
name = "exercícios"
version = "0.1.0"
description = ""
authors = ["Rodrigo"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
© 2021 GitHub, Inc.
Terms
Privacy
Security
